--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.46",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-materialize": "^3.10.0",
     "react-scripts": "5.0.1",
+    "sass-loader": "^13.0.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
